// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Color Color Component should match the snapshot 1`] = `
<div
  className="Color"
  style={
    Object {
      "backgroundColor": "#6e21e8",
    }
  }
>
  <div
    className="LockBtn"
  >
    <button
      className="handleLockClick"
      onClick={[Function]}
    >
      <img
        alt="#6e21e8"
        className="Lock"
        src="unlock-alt-solid.svg"
      />
    </button>
  </div>
  <div
    className="ColorCode"
  >
    <h3>
      #6e21e8
    </h3>
  </div>
</div>
`;

exports[`Color Color Component should show the lock icon if locked is equal to true 1`] = `
<div
  className="Color"
  style={
    Object {
      "backgroundColor": "#6e21e8",
    }
  }
>
  <div
    className="LockBtn"
  >
    <button
      className="handleLockClick"
      onClick={[Function]}
    >
      <img
        alt="#6e21e8"
        className="Lock"
        src="lock-alt-solid.svg"
      />
    </button>
  </div>
  <div
    className="ColorCode"
  >
    <h3>
      #6e21e8
    </h3>
  </div>
</div>
`;
